# refindmgr

./: .gitignore  LICENSE  README.md  cli.py  install.sh  main.py  pyproject.toml  system.py  themes.py  uninstall.sh
.github/workflows/: test.yml
refindmgr/: __init__.py  cli.py  conf.py  paths.py  sixel.py  themes.py
refindmgr-readme-styled/: README.md
refindmgr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
refindtm/: __init__.py  catalog.py  cli.py  system.py  themes.py
tests/: test_catalog.py  test_catalog_previews.py  test_cli.py  test_conf.py  test_installer.py  test_paths.py  test_sixel.py  test_system.py  test_theme_discovery.py  test_themes.py  test_ui_refinements.py
