[project]
name = "refindmgr"
version = "2.1.1"
description = "CLI ringan untuk memasang, mengganti, dan menghapus tema rEFInd tanpa edit manual refind.conf."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rizqi Ananda" }]

[project.scripts]
refindmgr = "refindmgr.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["refindmgr*"]
